[package]
name = "jpeg2k-sandboxed"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Sandboxed Openjpeg image decoder"
keywords = ["j2k", "jp2", "jpeg2000", "image"]
repository = "https://github.com/Neopallium/jpeg2k"
homepage = "https://github.com/Neopallium/jpeg2k"

[features]
default = ["sandbox"]

sandbox = [
	"wasmtime",
	"wasmtime-wasi",
	"wasi-common",
	"log",
	"jpeg2k/image",
]

wasi-decoder = []

[[bin]]
name = "wasi-decoder"
required-features = ["wasi-decoder"]

[dependencies]
anyhow = "1.0"
rmp-serde = "1.1"

wasmtime = { version = "6.0", features = ["component-model"], optional = true }
wasmtime-wasi = { version = "6.0", optional = true }
wasi-common = { version = "6.0", optional = true }
log = { version = "0.4", optional = true }

jpeg2k = { version = ">=0.6.4", default-features = false, features = ["serde", "strict-mode"], path = "../jpeg2k/" }

[profile.wasm32-wasi]
inherits = "release"
strip = "debuginfo"
lto = true
