[package]
name = "jpeg2k-sandboxed"
version = "0.6.3"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Sandboxed Openjpeg image decoder"
keywords = ["j2k", "jp2", "jpeg2000", "image"]
repository = "https://github.com/Neopallium/jpeg2k-sandboxed"
homepage = "https://github.com/Neopallium/jpeg2k-sandboxed"

[features]
default = ["sandbox", "openjpeg-sys"]

openjpeg-sys = ["jpeg2k?/openjpeg-sys"]
openjp2 = ["jpeg2k?/openjp2"]

sandbox = [
	"wasmtime",
	"wasmtime-wasi",
	"wasi-common",
	"log",
	"image",
]

wasi-decoder = [
	"jpeg2k",
]

[[bin]]
name = "wasi-decoder"
required-features = ["wasi-decoder"]

[dependencies]
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"

wasmtime = { version = "6.0", features = ["component-model"], optional = true }
wasmtime-wasi = { version = "6.0", optional = true }
wasi-common = { version = "6.0", default-features = false, optional = true }
log = { version = "0.4", optional = true }
image = { version = "0.24", default-features = false, optional = true }

jpeg2k = { version = ">=0.6.6", default-features = false, features = ["strict-mode"], optional = true }

[dev-dependencies]
rayon = "1.7"

[profile.wasm32-wasi]
inherits = "release"
strip = "symbols"
lto = true
